--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+#  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
+#  firebase_storage: ^11.0.8
+#  firebase_messaging: ^14.6.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  firebase_database: ^10.3.8
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^4.13.6
 
 dev_dependencies:
   flutter_test:
@@ -58,10 +62,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
