--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_database: ^10.3.8
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.13.6
+  intl: ^0.19.0
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
