--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.13.6
   intl: ^0.19.0
   location: ^5.0.3
+  flutter_reactive_ble: ^5.2.0
 
 dev_dependencies:
   flutter_test:
