--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   location: ^5.0.3
   flutter_reactive_ble: ^5.2.0
   fluttertoast: ^8.2.4
+  awesome_ripple_animation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
