--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_reactive_ble: ^5.2.0
   fluttertoast: ^8.2.4
   awesome_ripple_animation: ^2.0.0
+  ntp: ^2.0.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
