--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,13 +41,16 @@ dependencies:
   cloud_firestore: ^4.13.6
   functional_data: ^1.1.1
   provider: ^6.1.1
-  intl: ^0.19.0
+#  intl: ^0.19.0
   location: ^5.0.3
   flutter_reactive_ble: ^5.2.0
   fluttertoast: ^8.2.4
   awesome_ripple_animation: ^2.0.0
   ntp: ^2.0.0
   auto_size_text: ^3.0.0
+  flutter_localizations:
+    sdk: flutter
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +76,7 @@ flutter:
 
   assets:
     - images/
+    - lang/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
