--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   get: ^4.6.6
+  email_validator: ^2.1.17
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
