--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   email_validator: ^2.1.17
   permission_handler: ^11.0.1
   shared_preferences: ^2.2.2
+  get_storage: ^2.1.1
+  flutter_native_splash: ^2.3.7
   riverpod: ^2.4.9
 
 dev_dependencies:
