--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   get_storage: ^2.1.1
   flutter_native_splash: ^2.3.7
   riverpod: ^2.4.9
+  uni_links: ^0.5.1
+  mailer: ^6.1.0
 
 dev_dependencies:
   flutter_test:
