--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,33 +30,50 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-#  firebase_core: ^2.3.0
+
+  ##firebase packages
   firebase_auth: ^4.1.3
-#  firebase_storage: ^11.0.8
-#  firebase_messaging: ^14.6.3
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   firebase_database: ^10.3.8
-  cupertino_icons: ^1.0.2
   cloud_firestore: ^4.13.6
-  functional_data: ^1.1.1
-  provider: ^6.1.1
-#  intl: ^0.19.0
-  location: ^5.0.3
-  flutter_reactive_ble: ^5.2.0
+  firebase_core: ^2.24.2
+  get_storage: ^2.1.1
+
+  ##time package
+  ntp: ^2.0.0
+
+  ##user interface packages
   fluttertoast: ^8.2.4
   awesome_ripple_animation: ^2.0.0
-  ntp: ^2.0.0
   auto_size_text: ^3.0.0
+  cupertino_icons: ^1.0.2
+  #  flutter_native_splash: ^2.3.7
+
+  ##auto-login packages
+  shared_preferences: ^2.2.2
+
+  ##functionality
+  functional_data: ^1.1.1
+  provider: ^6.1.1
+#  riverpod: ^2.4.9
+
+  ##location permission
+  location: ^5.0.3
+
+  ##ble package
+  flutter_reactive_ble: ^5.2.0
+
+  ##language change package
   flutter_localizations:
     sdk: flutter
+
+  ##GetX
   get: ^4.6.6
+
+  ##email verification
   email_validator: ^2.1.17
   permission_handler: ^11.0.1
-  shared_preferences: ^2.2.2
-  get_storage: ^2.1.1
-  flutter_native_splash: ^2.3.7
-  riverpod: ^2.4.9
+
+  ##redirect
   uni_links: ^0.5.1
   mailer: ^6.1.0
 
